k8s/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: devops-case-app
  template:
    metadata:
      labels:
        app: devops-case-app
    spec:
      containers:
        - name: app
          image: gizemk/devops-case-app:latest
          ports:
            - containerPort: 9001
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/foos?val=TEST
              port: 9001
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/foos?val=TEST
              port: 9001
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - devops-case-app
              topologyKey: kubernetes.io/hostname
