k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: app
spec:
  selector:
    app: devops-case-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
  type: ClusterIP
